feat:  dpdk support for kube-ovn dpdk

--- a/pkg/virt-launcher/virtwrap/BUILD.bazel
+++ b/pkg/virt-launcher/virtwrap/BUILD.bazel
@@ -28,6 +28,7 @@ go_library(
         "//pkg/network/namescheme:go_default_library",
         "//pkg/network/setup:go_default_library",
         "//pkg/network/sriov:go_default_library",
+        "//pkg/network/vhostuser:go_default_library",
         "//pkg/network/vmispec:go_default_library",
         "//pkg/util:go_default_library",
         "//pkg/util/hardware:go_default_library",
